--- a/src/css/_scrollbar.scss
+++ b/src/css/_scrollbar.scss
@@ -15,3 +15,28 @@
 ::-webkit-scrollbar-thumb:active {
   background-color: lighten(#3b4453, 8%);
 }
+
+//windows 平台设置滚动条样式
+.Win32 {
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    border: 2px solid transparent;
+    background-color: hsla(0, 0%, 0%, .4);
+    background-clip: content-box;
+    border-radius: 6px;
+    min-height: 60px;
+    min-width: 60px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: hsla(0, 0%, 0%, .5);
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background-color: hsla(0, 0%, 0%, .6);
+  }
+}
